Some basic document setup.  Swapped the example figure for a .jpg b/c no one uses .eps anymore.

--- a/latex/chapter-tables+figs.tex
+++ b/latex/chapter-tables+figs.tex
@@ -104,8 +104,9 @@ at the beginning of the document.
 
 \begin{figure}[htb] % Imported eps example.
 \begin{center}
-\ \psfig{file=pup-on-rug.eps,height=1.5in,width=2.0in}
-\caption{An example of an imported eps file.}
+% \psfig{file=pup-on-rug.eps,height=1.5in,width=2.0in}
+\ \includegraphics[width=2.0in,height=2.0in]{mick1.jpg}
+\caption{An example of an imported jpg file.}
 \label{f:ex}
 \end{center}
 \end{figure}
