--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -1,19 +1,22 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  disstemplate.tex, to be compiled with latex.		     %
-%%  08 April 2002	Version 4				     %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%								     %
-%%  Writing a Doctoral Dissertation with LaTeX at		     %
-%%	the University of Texas at Austin			     %
-%%								     %
-%%  (Modify this ``template'' for your own dissertation.)	     %
-%%								     %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Preston Landers  <planders@utexas.edu>
+% Master's Report document 
+%
+% Major: Computer and Electrical Engineering
+% Focus: Software Engineering
+% Cockrell School of Engineering
+% The University of Texas at Austin
+%
+% Based on the UT LaTeX package provided at:
+% http://www.utexas.edu/ogs/etd/LaTeX/
+
 
 
 \documentclass[12pt]{report}	% The documentclass must be ``report''.
 
 \usepackage{utdiss2}  		% Dissertation package style file.
+
+%\usepackage[driver=pdftex,margin=1.2in,letterpaper]{geometry} % Required to change the page size to A4
+%\usepackage[driver=xetex,margin=1.2in,letterpaper]{geometry} % Required to change the page size to A4
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -27,8 +30,10 @@
 \usepackage{eucal} 	 	% Euler fonts
 \usepackage{verbatim}      	% Allows quoting source with commands.
 \usepackage{makeidx}       	% Package to make an index.
-\usepackage{psfig}         	% Allows inclusion of eps files.
-\usepackage{epsfig}         	% Allows inclusion of eps files.
+%\usepackage{psfig}         	% Allows inclusion of eps files.
+%\usepackage{epsfig}         	% Allows inclusion of eps files.
+%\usepackage{epstopdf}
+\usepackage{graphicx}
 \usepackage{citesort}         	% 
 \usepackage{url}		% Allows good typesetting of web URLs.
 %\usepackage{draftcopy}		% Uncomment this line to have the
@@ -40,9 +45,9 @@
 				% the word draft before you re-run
 				% Makediss for the last time.
 
-\author{Craig William McCluskey}  	% Required
+\author{Preston Brent Landers}  	% Required
 
-\address{9905 Chukar Circle\\ Austin, Texas 78758}  % Required
+\address{3300 Bratton Ridge Crossing\\ Austin, Texas 78728}  % Required
 
 \title{Writing a Doctoral Dissertation with \LaTeX{} at
 		the University of Texas at Austin}
@@ -71,9 +76,11 @@
 % NOTE: The Office of Graduate Studies will accept only two supervisors!
 % 
 %
+%\supervisor
+%	[Adnan Aziz]
+%	{Johannes Kepler}
 \supervisor
-	[Isaac Newton]
-	{Johannes Kepler}
+	{Adnan Aziz}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -87,15 +94,18 @@
 %	of six committee members.
 %
 %
+%\committeemembers
+%	[Erwin Schr\"odinger]
+%	[Albert Einstein]
+%	[Charles Townes]
+%	{Arthur Schawlow}
 \committeemembers
-	[Erwin Schr\"odinger]
-	[Albert Einstein]
-	[Charles Townes]
-	{Arthur Schawlow}
+	{Kathleen Suzanne Barber}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\previousdegrees{B.S.}
+\previousdegrees{B.A.}
      % The abbreviated form of your previous degree(s).
      % E.g., \previousdegrees{B.S., MBA}.
      %
@@ -130,13 +140,13 @@
 % (remove the % in front of) the following two command lines (the ones
 % that have the \ as their second character).
 %
-%\degree{MASTER OF ARTS}
-%\degreeabbr{M.A.}
+\degree{MASTER OF SCIENCE}
+\degreeabbr{M.A.}
 
 % Uncomment the line below that corresponds to the type of master's
 % document you are writing.
 %
-%\masterreport
+\masterreport
 %\masterthesis
 
 
