--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -15,8 +15,8 @@
 
 \usepackage{utdiss2}  		% Dissertation package style file.
 
-%\usepackage[driver=pdftex,margin=1.2in,letterpaper]{geometry} % Required to change the page size to A4
-%\usepackage[driver=xetex,margin=1.2in,letterpaper]{geometry} % Required to change the page size to A4
+%\usepackage[driver=pdftex,margin=1.2in,letterpaper]{geometry}
+%\usepackage[driver=xetex,margin=1.2in,letterpaper]{geometry}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -30,12 +30,36 @@
 \usepackage{eucal} 	 	% Euler fonts
 \usepackage{verbatim}      	% Allows quoting source with commands.
 \usepackage{makeidx}       	% Package to make an index.
-%\usepackage{psfig}         	% Allows inclusion of eps files.
-%\usepackage{epsfig}         	% Allows inclusion of eps files.
-%\usepackage{epstopdf}
 \usepackage{graphicx}
 \usepackage{citesort}         	% 
+
 \usepackage{url}		% Allows good typesetting of web URLs.
+%\usepackage{hyperref}  % adds PDF bookmarks and such
+%\hypersetup{
+% colorlinks=true,
+% linkcolor=black,  % blue
+% citecolor=black,  % green
+% urlcolor=black,
+%% pdffitwindow=true,
+% pdftitle={Selmy: an adaptive API for cloud database services},
+% pdfauthor={Preston Landers <planders@utexas.edu>},
+% pdfsubject={TODO... fill me in.},
+% pdfkeywords={HTTP} {REST} {RESTful} {database} {cloud} {API},
+% }
+
+\usepackage{fontspec}
+\usepackage{xunicode}
+\usepackage{fixltx2e} % fix a problem with fnsymbol w/ fontspec, such as footnotes in vita
+
+%\setmonofont[Scale=0.95]{Inconsolata}
+\setmonofont{Inconsolata}
+\setmainfont[Ligatures=TeX]{Adobe Text Pro}
+%\setmainfont[Ligatures=TeX]{Minion Pro}
+
+%\pretolerance=10000
+
+%\linespread{1.5} % Line spacing
+
 %\usepackage{draftcopy}		% Uncomment this line to have the
 				% word, "DRAFT," as a background
 				% "watermark" on all of the pages of
@@ -47,11 +71,10 @@
 
 \author{Preston Brent Landers}  	% Required
 
-\address{3300 Bratton Ridge Crossing\\ Austin, Texas 78728}  % Required
+\address{planders@utexas.edu}  % Required
 
-\title{Writing a Doctoral Dissertation with \LaTeX{} at
-		the University of Texas at Austin}
-                                                    % Required
+% Required
+\title{Selmy: an adaptive API for cloud database services}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % NOTICE: The total number of supervisors and other members %%%%%%%%%%
@@ -111,14 +134,14 @@
      %
      % The default value is `B.S., M.S.'
 
-%\graduationmonth{...}      
+\graduationmonth{May}
      % Graduation month, either May, August, or December, in the form
      % as `\graduationmonth{May}'. Do not abbreviate.
      %
      % The default value (either May, August, or December) is guessed
      % according to the time of running LaTeX.
 
-%\graduationyear{...}   
+\graduationyear{2015}
      % Graduation year, in the form as `\graduationyear{2001}'.
      % Use a 4 digit (not a 2 digit) number.
      %
@@ -277,7 +300,7 @@
 %
 \begin{dedication}
 \index{Dedication@\emph{Dedication}}%
-Dedicated to my wife Shirley.
+Dedicated to my wife Andrea.
 \end{dedication}
 
 
@@ -398,22 +421,13 @@ This document and its source file show to write a Doctoral Dissertation using
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{vita}
-Craig William McCluskey
-was born in Minneapolis, Minnesota on 20 May 1950, the son of
-Dr. William R. McCluskey and Lucilla W. McCluskey.  He received the Bachelor
-of Science degree in Engineering from the California Institute of Technology
-and was commissioned an Officer in the United States Air Force in 1971.
-He entered active duty in October, 1971, and was stationed in Denver, Colorado,
-Colorado Springs, Colorado, Panama City, Florida, and Sacramento, California.
-He separated from the USAF in 1975 and worked as an engineer for several small
-electronics companies in California before moving to Colorado Springs, Colorado
-to work for Hewlett-Packard in 1979. He left Hewlett-Packard in 1989 and joined
-a small company based in Herndon, Virginia, working out of his house as a
-``remote'' engineer designing parts of the Alexis satellite for Los Alamos
-National Laboratories. Laid off when his portion of the satellite was
-completed, he applied to the University of Texas at Austin for enrollment
-in their physics program. He was accepted and started graduate studies in
-August, 1991.
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+Preston Brent Landers
+was born in Arlington, Texas and attended high school in Incline Village, Nevada. 
+He received his Bachelor of Arts in English from the University of Texas at Austin.
+He works as a software engineer for Journyx, Inc.\footnote[1]{\url{http://www.journyx.com}}
+in Austin, Texas and began graduate studies at 
+the University of Texas at Austin in August 2012. 
 
 \end{vita}
 
