--- a/latex/utdiss2.sty
+++ b/latex/utdiss2.sty
@@ -552,7 +552,11 @@
 	% when creating master's document.
 				%	08 Apr 2002	cwm
 %
-\def\certif@words{ }		%	13 Mar 2002	cwm
+\def\certif@words{ 
+	\centerline{The Report Committee for \au@thor}
+	\centerline{certifies that this is the approved version\ 
+		of the following report:}		
+}		%	13 Mar 2002	cwm
 %
 \def\approvalwords{%
          \leftline{\hbox to 2.5in{}APPROVED BY\hfill}            % 
