--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -41,7 +41,7 @@
 % citecolor=black,  % green
 % urlcolor=black,
 %% pdffitwindow=true,
-% pdftitle={Selmy: an adaptive API for cloud database services},
+% pdftitle={Speakur: a case study of Web Component encapsulation and synchronization},
 % pdfauthor={Preston Landers <planders@utexas.edu>},
 % pdfsubject={TODO... fill me in.},
 % pdfkeywords={HTTP} {REST} {RESTful} {database} {cloud} {API},
@@ -80,7 +80,7 @@
 \address{\texttt{planders@utexas.edu}}  % Required
 
 % Required
-\title{Selmy: an adaptive API for cloud database services}
+\title{Speakur: a case study of Web Component \\ encapsulation and synchronization}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % NOTICE: The total number of supervisors and other members %%%%%%%%%%
@@ -129,7 +129,7 @@
 %	[Charles Townes]
 %	{Arthur Schawlow}
 \committeemembers
-	{Kathleen Suzanne Barber}
+	{Christine Julien}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -313,7 +313,7 @@ Dedicated to my wife Andrea and to my parents.
 \begin{acknowledgments}		% Optional
 \index{Acknowledgments@\emph{Acknowledgments}}%
 I wish to thank the multitudes of people who helped me. Time would
-fail me to tell of \ldots
+fail me to tell of the multitudes of individuals \ldots
 \end{acknowledgments}
 
 
@@ -325,16 +325,18 @@ fail me to tell of \ldots
 \utabstract
 \index{Abstract}%
 \indent
-This document has the form of a ``fake'' doctoral dissertation
-in order to provide an example of such, but it is actually a
-copy of Miguel Lerma's documentation for the Mathematics
-Department Computer Seminar of 25 March 1998 updated in July 2001
-and following by Craig McCluskey to meet the March 2001
-requirements of the Graduate School.
+This paper presents Speakur, a real-time commenting system for the mobile web, as a case study of W3C Web Component encapsulation and synchronization.
+Speakur illustrates how new HTML5 standards such as Web Components can help apply widely used software engineering principles such as encapsulation and composition to the realm of web authoring.
+Any web author can easily insert Speakur as a component on page (a custom HTML tag) to provide a realtime comments forum for that page/article without needing to run their own server component. 
+It uses W3C Web Components (WC) standard to achieve encapsulation and separation from the containing page.
+Web Components are an upcoming HTML5 standard for writing custom HTML tags using techniques like templates and Shadow DOM. 
 
-This document and its source file show to write a Doctoral Dissertation using 
-\LaTeX{} and the utdiss2 package. 
-
+The report will discuss this new technology of HTML5 Web Components, 
+provide a case study of how to structure a real-world application using it along with embedding it in a larger system (possibly including native mobile apps), 
+and analyze and explain how to do efficient real-time component synchronization between web clients.
+The major research question is whether W3C Web Components provide a viable path towards the principles of encapsulation and easy code reuse which have been largely absent from web authoring so far. 
+In other words, is this the future of the web? 
+A subsidiary question is the most efficient way to achieve state synchronization between a large number of clients in the context of Web Components.
 
 
 \tableofcontents   % Table of Contents will be automatically
@@ -360,15 +362,15 @@ This document and its source file show to write a Doctoral Dissertation using
 %
 \include{chapter-introduction}
 
-\include{chapter-instructions}
+\include{chapter-background}
 
-\include{chapter-howtouse}
+\include{chapter-approach}
 
-\include{chapter-makingbib}
+\include{chapter-implementation}
 
-\include{chapter-tables+figs}
+\include{chapter-analysis}
 
-\include{chapter-math}
+\include{chapter-conclusions}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -429,10 +431,10 @@ This document and its source file show to write a Doctoral Dissertation using
 \begin{vita}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 Preston Brent Landers
-was born in Arlington, Texas and attended high school in Incline Village, Nevada. 
+was born in Texas and attended high school on the Nevada side of Lake Tahoe. 
 He received his Bachelor of Arts in English from the University of Texas at Austin.
 He works as a software engineer for Journyx, Inc.\footnote[1]{\url{http://www.journyx.com}}
-in Austin, Texas and began graduate studies at 
+in Austin, Texas and began graduate studies in Software Engineering at 
 the University of Texas at Austin in August 2012. 
 
 \end{vita}
