Having some fun now.

--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -1,6 +1,12 @@
-\chapter{Instructions for Preparing Dissertations, Theses, and Reports}
-\index{Instructions for Preparing Dissertations, Theses, and Reports%
-@\emph{Instructions for Preparing Dissertations, Theses, and Reports}}%
+\chapter{Background}
+\index{Background%
+@\emph{Background}}%
+
+When the Web was first created by Tim Berners-Lee in 1989, web pages were largely envisioned as single author documents, or at least written by a single cohesive team. 
+The idea of gluing together a complex web application out of simpler components like snapping together Legos seemed like a far-off dream at best.
+The concept of creating your own HTML elements with customized behaviors seemed beyond the capabilities of the web browsers of the day like Mosaic and Netscape Navigator.
+
+The rest of this text is just filler for now.
 
 We are not going to look at the complete set of instructions contained
 in \emph{Instructions for Preparation of Doctoral Dissertations and
