--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -129,7 +129,7 @@
 %	[Charles Townes]
 %	{Arthur Schawlow}
 \committeemembers
-	{Christine Julien}
+	{Your Name Here}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
