--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -20,13 +20,13 @@ presents a case study of applying W3C Web Components
 to achieve encapsulation and separation of concerns within the context of 
 collaborative web authoring. 
 
-The potential componentization of web is one of the most exciting innovations and mirrors the overall growth in the Service Oriented Architecture 
+The potential componentization of web is one of the most exciting innovations in web development in years and mirrors the overall growth in the Service Oriented Architecture 
 \index{Service Oriented Architecture}
 as a organizational and deployment concept. 
-The conversions of dynamic web logic, not just 'dead' snippets of HTML, into bundles of reusable, extendable, composable components enables web developers to move to a higher level of abstraction than was previously possible.
+The conversion of dynamic web logic, not just inert snippets of HTML, into bundles of reusable, extendable, composable components enables web developers to move to a higher level of abstraction than was previously possible.
 
 The componentization of the web will enable all sorts of interesting new composite services, mashups, and help broaden the potential pool of web developers. 
-It will do this by allowing authors to publish easily reusable 'widgets' that can be easily juggled around and combined in novel ways that previously required a highly integrated (and hugely expensive) development model.
+It will do this by allowing authors to publish easily reusable `widgets' that can be easily juggled around and combined in novel ways that previously required a highly integrated (and hugely expensive) development model or lots of tedious glue code.
 
 \section{Structure of This Paper}
 \index{Structure of This Paper@\emph{Structure of This Paper}}%
@@ -35,19 +35,27 @@ The goal of this paper is to demonstrate the application of software engineering
 automatic synchronization of application state. 
 This paper attempts to explain many of the goals and principles of the Web Components initiative and show how a number of different technologies taken together help raise the overall level of abstraction for web authors and developers.
 
+The Background section of this report provides an introduction some of the architectural problems inherent in modern web authoring and how Web Components (WC) attempts to address them. 
+It also provides some background on software engineering design patterns that are embodied in Web Components such as encapsulation, composition, and inheritance, as well as technologies such as WebSockets and NoSQL databases.
+It describes some of the motivations behind the development of Speakur and some of the specific software engineering problems that it is attempting to solve, such as the ability to provide a hassle-free way to host an embedded discussion forum inside an arbitrary web resource in a way that is fully encapsulated.
 
-The Background section of this report provides an introduction some of the architectural problems inherent in modern web authoring and how Web Components (WC) attempts to address these issues.
-It also describes the specific software engineering problem that Speakur is attempting to solve, which is the ability to provide a hassle-free way to host an embedded discussion forum inside an arbitrary web resource in a way that is fully encapsulated.
+The Approach section details the specific structures and techniques used when constructing a Web Component, and describes the technology and software architecture choices that went into Speakur. 
+It describes how Speakur uses Web Components to implement encapsulated functionality that is protected 
 
-The Approach section details the specific structures and techniques used when constructing a Web Component. 
+The Implementation section describes the application of Web Component principles to the specific task of providing a flexible and suitably generic discussion forum / commenting system. 
+It describes the overall architecture, code flow, and synchronization process. 
+An important topic in this section is security: how can we implement a largely client-based system while maintaining some kind of data integrity?
 
+This is followed by an Analysis section which discusses some of the outcomes as compared to the original goals and also looks at the impact of the selection of Web Components, Polymer, Firebase and some of the other architectural choices. A few quantitative results are included, I hope.
+
+Finally, the Conclusion section is just all kinds of awesome and wraps up the paper. 
 
 \section{Source Code and Demonstration Resources}
 \index{Source Code and Demonstration Resources@\emph{Source Code and Demonstration Resources}}%
 
-The source code for Speakur consists of HTML and Javascript code located at the following git repository:
+The source code for Speakur consists of HTML and Javascript code located in two git version control repositories. The first repository is for the actual \texttt{$\textless$speakur-discussion\textgreater} HTML element which is available for use by web authors, and the second contains additional demonstrations, a standalone application and a management console.
 
-The public documentation for web authors to use Speakur in their own sites can be found here:
+The public documentation to help web authors use Speakur in their own sites can be found here:
 
 Demonstrations of several web pages which show off embedded Speakur discussions are available at the following location:
 
