working on abstract

--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -14,6 +14,12 @@
 %purpose. Yadda, yadda, yadda, \ldots
 %\end{quote}
 
+The Hypertext Markup Language (HTML) standard for composing web pages has proven wildly successful  since its introduction in 1993 with billions of pages served and millions of public and private web applications in existence. [CITE?]
+
+Web designers and programmers have long wanted the ability to combine independent, reusable components on their pages without them interfering with each other. 
+The original Document Object Model abstraction used by HTML did not allow for this; everything lived on one big page. 
+
+
 This report describes Speakur, a real time discussion system for the mobile web, and 
 presents a case study of applying W3C Web Components 
 \index{Web Components}
