--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -82,7 +82,7 @@
 \address{\texttt{planders@utexas.edu}}  % Required
 
 % Required
-\title{Speakur: a case study of Web Component \\ architecture for composable applications}
+\title{Speakur: leveraging Web Components \\ for composable applications}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % NOTICE: The total number of supervisors and other members %%%%%%%%%%
@@ -331,13 +331,13 @@ fail me to tell of the multitudes of individuals \ldots
 \index{Abstract}%
 \indent
 
-This report is a case study of applying encapsulation, composition and distributed synchronization techniques to web application architecture through the use of Web Components, a proposed extension to the W3C HTML5 document standard. 
-The author presents Speakur, a real-time social discussion plugin for the mobile and desktop web, as an example of how HTML5 Web Component technologies can enable web designers and programmers to realize engineering principles such as modularity, encapsulation and separation of concerns when composing pages out of many disparate elements sourced from a diverse set of authors.
+This report is a case study of applying encapsulation, composition and distributed synchronization techniques to web application architecture with the use of Web Components, a proposed extension to the W3C HTML5 document standard. 
+The author presents Speakur, a real-time social discussion plugin for the mobile and desktop web, as an example of applying HTML5 Web Component technologies to realize software engineering principles such as modularity, encapsulation and separation of concerns when composing pages out of components sourced from a diverse set of authors.
 
 Web authors can add a Speakur discussion to their page by inserting a simple HTML element at the desired spot to give the page a real-time discussion or feedback system.
 Speakur uses the Polymer framework's implementation of the draft Web Components (WC) standard to achieve encapsulation of its internal implementation details from the containing page and present a simplified, well defined interface (API).
 
-Web Components are a proposed HTML5-related W3C standard for writing custom HTML tags that take advantage of new browser technologies like Shadow DOM, package importing, CSS Flexboxes and data-bound templates.
+Web Components are a proposed World Wide Web Consortium (W3C) standard for writing custom HTML tags that take advantage of new browser technologies like Shadow DOM, package importing, CSS Flexboxes and data-bound templates.
 This report reviews Web Component technologies and provides a case study for structuring a real-world WC applet that is embedded in a larger app or system.
 The major research question is whether W3C Web Components provide a viable path towards the encapsulation and composition principles that have largely eluded web engineers thus far. 
 In other words, \textit{are components really the future of the web}? 
