Set mono font to Consolas

--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -66,10 +66,11 @@
 %\renewcommand{\ttdefault}{clmjv}
 
 % My version of Inconsolata may not support bold/italic?
-\setmonofont[SmallCapsFont={Latin Modern Mono Caps}]{Latin Modern Mono Light}
+%\setmonofont[SmallCapsFont={Latin Modern Mono Caps}]{Latin Modern Mono Light}
 
 \setmainfont[Ligatures=TeX]{Adobe Text Pro}
 %\setmainfont[Ligatures=TeX]{Minion Pro}
+\setmonofont[Scale=0.95]{Consolas}
 
 %\usepackage{libertine}%% Only as example for the romans/sans fonts
 %\usepackage{beraserif}
